Large cleanup of .htm files for gwsetup

--- a/bin/setup/lang/bsi_err.htm
+++ b/bin/setup/lang/bsi_err.htm
@@ -18,39 +18,26 @@
 <h1 style="margin:0;"><font color=red>[error]
 </font></h1>
 </div>
-
-
 [The command "%d" exited with an error code. This operation may have not been done.]
-%(
-The command "%d" exited with an error code. This operation may have not been don
-e.
-%)
-
-<p />
-
-[Here are the traces of the command, maybe you can find an explanation:]
-
-<p />
-
+<p>
+[Here are the traces of the command, maybe you can find an explanation][:]
+<p>
 <dl><dt><dd>
 <pre>
 %g{- [no traces]
 -}
 </pre>
 </dl>
-
-<p />
+<p>
 [And the content of gwsetup.log]
-
-<p />
-
+<p>
 <dl><dt><dd>
 <pre>
 %G{- [no traces]
 -}
 </pre>
 </dl>
-
-<p />
-
-[Or you can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
+<p>
+[Return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
+</body>
+</html>
