--- a/bin/setup/lang/bso.htm
+++ b/bin/setup/lang/bso.htm
@@ -25,11 +25,10 @@
 
 %v{<li>
 
-[<b>Warning</b>: there already exists a database with the name "%o" in your <a href="gwsetup?lang=%l;v=list.htm">directory</a>. If you push the button "Ok" below, it will be erased.]
+[<b>Warning</b>: there already exists a database with the name "%o" in your directory. If you push the button "Ok" below, it will be erased.]
 %(
-<b>Warning</b>: there already exists a database with the name "%o" in your <a hr
-ef="gwsetup?lang=%l;v=list.htm">directory</a>. If you push the button "Ok" below
-, it will be erased.
+<b>Warning</b>: there already exists a database with the name "%o" in your directory.
+If you push the button "Ok" below, it will be erased.
 %)
 <p />
 
