--- a/bin/setup/lang/bso_err.htm
+++ b/bin/setup/lang/bso_err.htm
@@ -18,24 +18,10 @@
 <h1 style="margin:0;"><font color=red>[error]
 </font></h1>
 </div>
-
-
-<p />
-
+<p>
 [The previous command exited with an error code. Your database may have not been created.]
-%(
-The previous command exited with an error code. Your database may have not been 
-created.
-%)
-
-<p />
-
-[Look at the <a href="gwsetup?lang=%l;v=traces.htm">traces</a>, maybe you can find an explanation.]
-%(
-Look at the <a href="gwsetup?lang=%l;v=traces.htm">traces</a>, maybe you can fin
-d an explanation.
-%)
-
-<p />
-
-[Or you can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
+<p>
+[Look at the traces, maybe you can find an explanation.]
+(<a href="gwsetup?lang=%l;v=traces.htm">traces</a>)
+<p>
+[Return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
