--- a/bin/setup/lang/bso_ok.htm
+++ b/bin/setup/lang/bso_ok.htm
@@ -15,54 +15,22 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[Database created]
-</h1>
+<h1 style="margin:0;">[Database created]</h1>
 </div>
-
-<p /><p />
-
+<p>
 [Done. The operation is terminated. Your database named "%o" is created.]
-
-<p />
-
-[To consult your database, and possibly modify it, the <a href="gwsetup?lang=%l;v=gwd_info.htm">gwd service</a> must have been launched.]
-%(
-To consult your database, and possibly modify it, the <a href="gwsetup?lang=%l;v
-=gwd_info.htm">gwd service</a> must have been launched.
-%)
-
-<p />
-
+<p>
+[To consult your database, and possibly modify it, the gwd service must have been launched.]
+<p>
 [If it is, try the address below. The displayed page is called "welcome page" of your database. Bookmark it.]
-%(
-If it is, try the address below. The displayed page is called "welcome page" of 
-your database. Bookmark it.
-%)
-
-<p />
-
+<p>
 <ul>
-
 <li><a
 href="http://%m:%P/%o">http://%m:%P/%o</a>
-
 </ul>
-
-<p />
-
-[You can also return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
-%(
-You can also return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>
-.
-%)
-
-<br /><p />
-
-[Click <a href="gwsetup?lang=%l;v=bso_comm.htm">here</a> for the alert messages in the file "comm.log":]
-%(
-Click <a href="gwsetup?lang=%l;v=bso_comm.htm">here</a> for the alert messages i
-n the file "comm.log":
-%)
-
-<p />
+<p>
+[Return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
+<p>
+[Read the alert messages in the file "comm.log"] (<a href="gwsetup?lang=%l;v=bso_comm.htm">comm.log</a>)
+</body>
+</html>
