--- a/bin/setup/lang/connex.htm
+++ b/bin/setup/lang/connex.htm
@@ -25,8 +25,7 @@
 <input type="hidden" name="lang" value="%l">
 <input type="hidden" name="server" value="%m">
 <input type="hidden" name="gwd_p" value="%P">
-
-[Select your database by clicking on the associated button:]
+[Select your database by clicking on the associated button][:]
 <p>
 <table class="setup">
 %b{
@@ -39,7 +38,7 @@
 </table></dl>
 <p>
 <li>
-[Select the options you want:]
+[Select the options you want][:]
 <p>
 <table class="setup">
 <tr align="left">
@@ -127,11 +126,8 @@ in irreversible deletions. Having a backup archive is recommended.
 <p>
 <tr align="left">
 <td><input type="radio" name="o" id="o" value="/notes_d/connex.txt">
-<label for="o" style="font-family: monospace">&nbsp;&nbsp;</label>[Output results in basename/notes_d/connex.txt (-o must stay empty and notes_d must exist).]
-%(
-Output results in basename/notes_d/connex.txt (-o must stay empty and notes_d mu
-st exist).
-%)
+<label for="o" style="font-family: monospace">&nbsp;&nbsp;</label>
+[Output results in basename/notes_d/connex.txt (-o must stay empty and notes_d must exist).]
 </td>
 </tr>
 <p>
@@ -143,9 +139,8 @@ st exist).
 </table></dl>
 <p>
 <li>
-[Then click on "Ok".]
+[Then click on this button][:]
 </li>
-
 <input type="submit" value="Ok">
 </dl>
 </form>
