--- a/bin/setup/lang/connex_ok.htm
+++ b/bin/setup/lang/connex_ok.htm
@@ -18,31 +18,26 @@
 [Connected components identified]
 </h1>
 </div>
-
-[You may observe results through two means:]
+[You may observe results through two means][:]
 <ul>
 <li>
 [By looking at the terminal window if you have not asked for result redirection.]
-
 <li>
 %Io1;;{
-[Using <b>gwd</b> to <a href="http://%m:%P/%a?w=w;lang=%l;m=NOTES;f=connex">visualize the  file</a> in the NOTES folder of your base where you have redirected output (%a.gwb/notes_d/connex.txt).<br> This file contains the last set of data stored at this location (which is not necessarily the one you have just computed - see the time stamp at the head of the file).<br> This solution allows you to follow links to designated persons.]
+[Using <b>gwd</b> to visualize the  file</a> in the NOTES folder of your base where you have redirected output (%a.gwb/notes_d/connex.txt).<br> This file contains the last set of data stored at this location (which is not necessarily the one you have just computed - see the time stamp at the head of the file).<br> This solution allows you to follow links to designated persons.]
+(<a href="http://%m:%P/%a?w=w;lang=%l;m=NOTES;f=connex">connex.txt</a>)
 %(
-Using <b>gwd</b> to <a href="http://%m:%P/%a?w=w;lang=%l;m=NOTES;f=connex">visua
-lize the  file</a> in the NOTES folder of your base where you have redirected ou
-tput (%a.gwb/notes_d/connex.txt).<br> This file contains the last set of data st
-ored at this location (which is not necessarily the one you have just computed -
- see the time stamp at the head of the file).<br> This solution allows you to fo
-llow links to designated persons.
+Using <b>gwd</b> to visualize the  file in the NOTES folder of your base
+where you have redirected output (%a.gwb/notes_d/connex.txt).<br>
+This file contains the last set of data stored at this location
+(which is not necessarily the one you have just computed -see the
+time stamp at the head of the file).<br>
+This solution allows you to follow links to designated persons.
 %)
 |
-[Using <b>gwsetup</b> to <a href="gwsetup?lang=%l;o=%K;v=bso_log.htm">visualize the file</a> in which results were redirected ("%K").]
-%(
-Using <b>gwsetup</b> to <a href="gwsetup?lang=%l;o=%K;v=bso_log.htm">visualize t
-he file</a> in which results were redirected ("%K").
-%)
+[Using <b>gwsetup</b> to visualize the file in which results were redirected ("%K").]
+(<a href="gwsetup?lang=%l;o=%K;v=bso_log.htm">log</a>)
 }
 </ul>
-
-<p />
-[Or you can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
+<p>
+[Return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
