--- a/bin/setup/lang/consang.htm
+++ b/bin/setup/lang/consang.htm
@@ -15,60 +15,46 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[Consanguinities]
-</h1>
+<h1 style="margin:0;">[Consanguinities]</h1>
 </div>
-
 [The initialization of consanguinities is necessary so that the consanguinities are displayed when browsing the database.]
 %(
-The initialization of consanguinities is necessary so that the consanguinities a
-re displayed when browsing the database.
+The initialization of consanguinities is necessary so that the consanguinities
+are displayed when browsing the database.
 %)
-
-<p />
-
+<p >
 <form method="get" action="consang">
-<input type="hidden" name="opt" value="check" />
-<input type="hidden" name="lang" value="%l" />
-<input type="hidden" name="q" value="on" />
+<input type="hidden" name="opt" value="check">
+<input type="hidden" name="lang" value="%l">
+<input type="hidden" name="q" value="on">
 <ul><li>
-[Select your database by clicking on the associated button.]
-
-<p />
-
+[Select your database by clicking on the associated button][:]
+<p>
 <table class="setup">
 %b{
 <tr align="left">
 <td>
-<input type="radio" name="anon" value="%a" />   </td>
+<input type="radio" name="anon" value="%a">   </td>
 <td><a href="http://%m:%P/%a">%a</a></td>
 </tr>|
 <tr align="left">
 <td>- [there is no database at present]
 </tr></td>}
 </table>
-
-<p />
+<p>
 <li>
-[Select the option if you want:]
-
-<p />
-
+[Select the options you want][:]
+<p >
 <table class="setup">
 <tr align="left">
 <td><input type="checkbox" name="scratch" value="on" />   </td>
 <td>[Restart the computing from scratch.]
 </td></tr>
 </table>
-
-<p />
+<p>
 <li>
-[Then press this button:]
-
-<p />
-
-<input type="submit" value="[Consang]
-" />
+[Then click on this button][:]
+<p>
+<input type="submit" value="[Consang]">
 </ul>
 </form>
