--- a/bin/setup/lang/consg_ok.htm
+++ b/bin/setup/lang/consg_ok.htm
@@ -21,15 +21,9 @@
 </div>
 
 [So. The operation "%d" on the database "%a" is terminated.]
-
-<p />
-
+<p>
 [You can consult it:]
-
-<p />
-
+<p>
 <ul><li><a href="http://%m:%P/%a">http://%m:%P/%a</a></ul>
-
-<p /><br />
-
-… [or return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
+<p><br>
+… [or return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
