--- a/bin/setup/lang/err_cnfl.htm
+++ b/bin/setup/lang/err_cnfl.htm
@@ -15,13 +15,11 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;"><font color="red">[error]
-</font></h1>
+<h1 style="margin:0;"><font color="red">[error]</font></h1>
 </div>
-
-
 [The name "%o" is used several times.]
+<p>
+[Go back to the previous page.] (<a href="%n">back</a>)
+</body>
+</html>
 
-<p />
-
-[Return to the previous page and correct.]
