--- a/bin/setup/lang/err_ngw.htm
+++ b/bin/setup/lang/err_ngw.htm
@@ -15,34 +15,26 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-<font color=red>[error]
-</font></h1>
+<h1 style="margin:0;"><font color=red>[error]</font></h1>
 </div>
-
-[You selected the directory:]
-
-<p />
-
+[You selected the directory][:]
+<p>
 <pre>
      %a
 </pre>
 
-[But it does not hold the command "gwu" required to transfer your database. Are you sure it is a <font color=#2f6400><b>GeneWeb</b></font> distribution directory]
+[But it does not hold the command "gwu" required to transfer your database. Are you sure it is a %G distribution directory]
 %(
 But it does not hold the command "gwu" required to transfer your database. Are y
-ou sure it is a <font color=#2f6400><b>GeneWeb</b></font> distribution directory
+ou sure it is a %G distribution directory
 %)
-
-<p />
-
-[Or else, it may be a very old version of <font color=#2f6400><b>GeneWeb</b></font> where the command "gwu" was called "gwb2gw". If it is the case, rename the file "gwb2gw" into "gwu" in this directory and try again.]
+<p>
+[Or else, it may be a very old version of %G where the command "gwu" was called "gwb2gw". If it is the case, rename the file "gwb2gw" into "gwu" in this directory and try again.]
 %(
-Or else, it may be a very old version of <font color=#2f6400><b>GeneWeb</b></fon
-t> where the command "gwu" was called "gwb2gw". If it is the case, rename the fi
-le "gwb2gw" into "gwu" in this directory and try again.
+Or else, it may be a very old version of %G where the command "gwu" was called "gwb2gw". 
+If it is the case, rename the file "gwb2gw" into "gwu" in this directory and try again.
 %)
-
-<p />
-
-[Return to the previous screen.]
+<p>
+[Go back to the previous page.] (<a href="%n">back</a>)
+</body>
+</html>
