--- a/bin/setup/lang/err_reco.htm
+++ b/bin/setup/lang/err_reco.htm
@@ -18,17 +18,15 @@
 <h1 style="margin:0;"><font color=red>[error]
 </font></h1>
 </div>
-
-
-[The previous command exited with an error code. Your database "%o" may have not been created. Look at the <a href="gwsetup?lang=%l;v=traces.htm">traces</a>, maybe you can find an explanation.]
+[The previous command exited with an error code. Your database "%o" may have not been created.]
+[Look at the traces, may be you can find an explanation.] 
+(<a href="gwsetup?lang=%l;v=traces.htm">traces</a>)
 %(
 The previous command exited with an error code. Your database "%o" may have not 
 been created. Look at the <a href="gwsetup?lang=%l;v=traces.htm">traces</a>, may
 be you can find an explanation.
 %)
-
-<p />
-
+<p>
 [You may have come from a too old version of <font color=#2f6400><b>GeneWeb</b></font>. In this case, <a href="gwsetup?lang=%l;v=recover.htm">try again</a> to do the transfer using the option to "pass by a GEDCOM file" (you can also go back to the previous screen to do it).]
 %(
 You may have come from a too old version of <font color=#2f6400><b>GeneWeb</b></
@@ -36,16 +34,14 @@ font>. In this case, <a href="gwsetup?lang=%l;v=recover.htm">try again</a> to do
  the transfer using the option to "pass by a GEDCOM file" (you can also go back 
 to the previous screen to do it).
 %)
-
-<p />
-
+<p>
 [If you were already doing that, and it does not work better, ask the creator of the <font color=#2f6400><b>GeneWeb</b></font> program. Send him the traces of the command.]
 %(
 If you were already doing that, and it does not work better, ask the creator of 
 the <font color=#2f6400><b>GeneWeb</b></font> program. Send him the traces of th
 e command.
 %)
-
-<p />
-
+<p>
 [You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
+</body>
+</html>
