--- a/bin/setup/lang/ged2gwb.htm
+++ b/bin/setup/lang/ged2gwb.htm
@@ -51,10 +51,10 @@ ectly in the url in your navigator.
 </span>
 <p>
 <li>
-[Enter The name you want to give to your <font color=#2f6400><b>GeneWeb</b></font> database.  If omitted, it will be deducted from the name of the GEDCOM file.]
+[Enter The name you want to give to your %G database. If omitted, it will be deducted from the name of the GEDCOM file.]
 %(
-Enter The name you want to give to your <font color=#2f6400><b>GeneWeb</b></font
-> database.  If omitted, it will be deducted from the name of the GEDCOM file.
+Enter The name you want to give to your %G database.
+If omitted, it will be deducted from the name of the GEDCOM file.
 %)
 <p>
 <table class="setup">
@@ -68,7 +68,7 @@ placeholder="[name]
 </table>
 <p>
 <li>
-[Select the options you want:]
+[Select the options you want][:]
 
 <p>
 <table class="setup">
@@ -206,7 +206,7 @@ e year.
 <p>
 <table class="setup">
 <tr align=left><td>   
-[Default source:]
+[Default source][:]
 </td>
 </tr>
 <tr>
@@ -296,10 +296,9 @@ May 2, 1912" or "February 5, 1912" according to the countries).
 </table>
 <p>
 <li>
-[Then click on "OK".]
-
-<p>
-
+[Then click on this button][:]
 <input type="submit" value="OK">
 </dl>
 </form>
+</body>
+</html>
