--- a/bin/setup/lang/gwc.htm
+++ b/bin/setup/lang/gwc.htm
@@ -15,22 +15,18 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[Import of a GeneWeb file]
-</h1>
+<h1 style="margin:0;">[Import of a GeneWeb file]</h1>
 </div>
 <p />
 <form method=GET action="gwc">
 <input type=hidden name=opt value=check>
 <input type=hidden name=lang value=%l>
-
 <ul><li>
 [Select the name of your GeneWeb source file (ending with ".gw");]
 <p>
 <table class="setup">
 <tr align=left><td>
 <ul><li>[Select the source file or navigate in your foldres.]
-
 %j
 </ul>
 </td></tr>
@@ -50,7 +46,7 @@ ue name for created database.
 </table>
 <span style="font-size:80%%">
 <table>
-<tr><td valign="top">[Note:]
+<tr><td valign="top">[Note][:]
 </td>
 <td>[../ allows you to reach the parent directory.<br> In the Windows world, this will be insufficient to change the drive letter (C: -> D:), but you can do this directly in the url in your navigator.]
 %(
@@ -63,11 +59,7 @@ ectly in the url in your navigator.
 </span>
 <p>
 <li>
-[Enter the name you want to give to your <font color=#2f6400><b>GeneWeb</b></font> database.]
-%(
-Enter the name you want to give to your <font color=#2f6400><b>GeneWeb</b></font
-> database.
-%)
+[Enter the name you want to give to your %G database.]
 <p>
 <table class="setup">
 <tr align=left><td>
@@ -77,7 +69,7 @@ Enter the name you want to give to your <font color=#2f6400><b>GeneWeb</b></font
 </table>
 <p>
 <li>
-[Select the options you want:]
+[Select the options you want][:]
 <p>
 <table class="setup">
 <tr align=left>
@@ -109,12 +101,12 @@ Enter the name you want to give to your <font color=#2f6400><b>GeneWeb</b></font
 </td>
 </tr>
 </table>
-
 <p>
 <li>
-[Then click on "Ok".]
-</li>
-<p>
+[Then click on this button][:]
 <input type=submit value="Ok">
+</ul>
 </form>
+</body>
+</html>
 
