--- a/bin/setup/lang/gwd_info.htm
+++ b/bin/setup/lang/gwd_info.htm
@@ -15,71 +15,49 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[Service gwd]
-</h1>
+<h1 style="margin:0;">[Service gwd]</h1>
 </div>
-
-<p><p>
-
-[To start the service:]
-
 <p>
-
+[To start the service][:]
+<p>
 <ul><li>[Under Windows, launch the program "gwd".]
 </ul>
-
 <p>
-
-<ul><li>[Under Unix, launch an xterm and type the following commands:]
-
+<ul><li>[Under Unix, launch an xterm and type the following commands][:]
 <p>
-
 <pre>
      $ cd "%w"
      $ %x%/gwd -hd %x
 </pre>
-
 </ul>
-
 <p>
-
 <ul><li>[Under Linux, if you installed <font color=#2f6400><b>GeneWeb</b></font> as an rpm package, the service has been automatically launched. If you stopped it and want to restart it, become root and type:]
 %(
 Under Linux, if you installed <font color=#2f6400><b>GeneWeb</b></font> as an rp
 m package, the service has been automatically launched. If you stopped it and wa
 nt to restart it, become root and type:
 %)
-
 <p>
-
 <pre>
      $ /etc/rc.d/init.d/gwd start
 </pre>
-
 </ul>
-
 <p>
-
-[To stop the service:]
-
+[To stop the service][:]
 <p>
-
 <ul><li>[Under Windows or Unix, type "control C" in the window where it is running.]
 </ul>
-
 <p>
-
 <ul><li>[Under Linux, if you installed <font color=#2f6400><b>GeneWeb</b></font> as an rpm package, become root and type:]
 %(
 Under Linux, if you installed <font color=#2f6400><b>GeneWeb</b></font> as an rp
 m package, become root and type:
 %)
-
 <p>
-
 <pre>
      $ /etc/rc.d/init.d/gwd stop
 </pre>
-
 </ul>
+</body>
+</html>
+
