--- a/bin/setup/lang/gwd_ok.htm
+++ b/bin/setup/lang/gwd_ok.htm
@@ -39,7 +39,7 @@ irectory "gw" of your <font color=#2f6400><b>GeneWeb</b></font> distribution.
 
 <p>
 
-[Here is its contents:]
+[Here is its contents][:]
 
 <p>
 
@@ -49,5 +49,6 @@ irectory "gw" of your <font color=#2f6400><b>GeneWeb</b></font> distribution.
 -}
 </pre>
 </dl>
-
-[You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
+[Return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
+</body>
+</html>
