--- a/bin/setup/lang/gwf.htm
+++ b/bin/setup/lang/gwf.htm
@@ -15,20 +15,14 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[Parameters]
-</h1>
+<h1 style="margin:0;">[Parameters]</h1>
 </div>
-
-<p><p>
-
+<p>
 <form method=GET action="gwf">
 <input type=hidden name=lang value="%l">
 <ul><li>
-[Select your database by clicking on the corresponding button:]
-
+[Select your database by clicking on the associated button][:]
 <p>
-
 <table class="setup">
 %b{
 <tr align=left>
@@ -38,14 +32,12 @@
 <tr align=left><td>- [there is no database at present]
 </tr></td>}
 </table>
-
 <p>
 <li>
-[Then push this button:]
-
-<p>
-
-<input type=submit value="[Configure]
-">
+[Then push this button][:]
+<input type=submit value="[Configure]">
 </ul>
 </form>
+</body>
+</html>
+
