--- a/bin/setup/lang/gwf_ok.htm
+++ b/bin/setup/lang/gwf_ok.htm
@@ -19,35 +19,23 @@
 [Parameters updated]
 </h1>
 </div>
-
 <p>
-
-[Here is an access to your database in order to test your parameters changing:]
-
+[Here is an access to your database in order to test your parameters changing][:]
 <p>
-
 <ul>
-
 <li><a href="http://%m:%P/%a">http://%m:%P/%a</a>
-
 </ul>
-
 <p>
-
-[For information:]
-
+[For information][:]
 <ul>
-
 <li>[The parameters are recorded in the text file "%a.gwf" in the directory "%w".]
-
 <li>[If you gave a text to put in the bottom of the pages, this text is recorded in the file named "%a.trl" in the subdirectory "lang" of the directory "%w".]
 %(
-If you gave a text to put in the bottom of the pages, this text is recorded in t
-he file named "%a.trl" in the subdirectory "lang" of the directory "%w".
+If you gave a text to put in the bottom of the pages, this text is recorded in
+the file named "%a.trl" in the subdirectory "lang" of the directory "%w".
 %)
-
 </ul>
-
 <p>
-
-[You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
+[Return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
+</body>
+</html>
