--- a/bin/setup/lang/gwfix.htm
+++ b/bin/setup/lang/gwfix.htm
@@ -28,8 +28,7 @@
 <tr>
 <td>
 <ul><li>
-[Select your base:]
-
+[Select your database by clicking on the associated button][:]
 <p>
 <table class="setup">
 %b{<tr align=left>
@@ -39,13 +38,10 @@
 </tr></td>}
 </table>
 <p>
-
-<p>
 <li>
-[Select the options you want:]
+[Select the options you want][:]
 <br>
 [(no selection is equivalent to select all).]
-
 <p>
 <table class="setup">
 <tr align=left>
@@ -159,12 +155,10 @@
 </tr>
 </table>
 <p>
-
 <li>
-[Then push this button:]
-
-<p>
-<input type="submit" value="[Fix base]
-">
+[Then push this button][:]
+<input type="submit" value="[Fix base]">
 </ul>
 </form>
+</body>
+</html>
