--- a/bin/setup/lang/gwu_ok.htm
+++ b/bin/setup/lang/gwu_ok.htm
@@ -15,18 +15,10 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[Operation completed]
-</h1>
+<h1 style="margin:0;">[Operation completed]</h1>
 </div>
-
 <p>
-
-[The extraction of the <font color=#2f6400><b>GeneWeb</b></font> source file is terminated.]
-%(
-The extraction of the <font color=#2f6400><b>GeneWeb</b></font> source file is t
-erminated.
-%)
+[The extraction of the %G source file is terminated.]
 
 <p>
 %Iodir;.;{
@@ -36,20 +28,16 @@ Files were reconstructed in the original sources directory.<br> Data created wit
 hout origin file has been directed to the file %o or to comm.log. It is up to yo
 u to manage this new source file, or to merge this data into existing files.
 %)
-
 |
 [This has built a file named "%o".]
-
 <p>
-
 [This file is in the directory "%w".]
 }
 <p>
-
 Comm.log:
 <pre>
 %g{- [empty file]
--}
+}
 </pre>
 <p>
-[You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
+[Return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
