--- a/bin/setup/lang/list.htm
+++ b/bin/setup/lang/list.htm
@@ -22,11 +22,8 @@
 
 <p />
 
-[To consult a database, the <a href="http://%m:%P/gwsetup?lang=%l;v=gwd_info.htm">gwd service</a> must have been launched.]
-%(
-To consult a database, the <a href="http://%m:%P/gwsetup?lang=%l;v=gwd_info.htm"
->gwd service</a> must have been launched.
-%)
+[To consult a database, the gwd service must have been launched.]
+(<a href="http://%m:%P/gwsetup?lang=%l;v=gwd_info.htm">gwd info</a>)
 
 <p />
 
@@ -39,7 +36,7 @@ To consult a database, the <a href="http://%m:%P/gwsetup?lang=%l;v=gwd_info.htm"
 </ul>
 
 <p />
-[Or go back to the <a href="http://%m:%z/gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
+[Or go back to the main menu.] (<a href="http://%m:%z/gwsetup?lang=%l;v=welcome.htm">welcome</a>)
 %(
 Or go back to the <a href="http://%m:%z/gwsetup?lang=%l;v=welcome.htm">main menu
 </a>.
