--- a/bin/setup/lang/main.htm
+++ b/bin/setup/lang/main.htm
@@ -14,114 +14,56 @@
 
 <body %Vbody_prop;>
 
-<center><h1><font color=#2f6400>Gwsetup - [Main menu]
-</font></h1></center>
-
-<p />
-
-<b>[Consult…]
-</b>
-
-<p />
-
-<ul>
-
-<li>[the existing <a href="gwsetup?lang=%l;v=list.htm">databases</a>]
-
-<li>[the <a href="gwsetup?lang=%l;v=traces.htm">traces of the latest command</a>.]
-
-</ul>
-
-<p />
-
-<b>[Create a database…]
-</b>
-
-<p />
-
-<ul>
-
-<li>[with the <a href="gwsetup?lang=%l;v=simple.htm">simple method</a>]
-
-<li>[from a <a href="gwsetup?lang=%l;v=ged2gwb.htm">GEDCOM file</a>]
-
-<li>[from a <a href="gwsetup?lang=%l;v=ged2gwb2.htm">GEDCOM file (ged2gwb2)</a>]
-
-<li>[from a <a href="gwsetup?lang=%l;v=gwc.htm">GeneWeb source file</a>]
-
-<li>[from a <a href="gwsetup?lang=%l;v=gwc2.htm">GeneWeb source file (gwc2)</a>]
-
-</ul>
-
-<p />
-
-<b>[Extract from a database…]
-</b>
-
-<p />
-
-<ul>
-
-<li>[a <a href="gwsetup?lang=%l;v=gwb2ged.htm">GEDCOM file</a>]
-
-<li>[a <a href="gwsetup?lang=%l;v=gwu.htm">GeneWeb source file</a>]
-
-</ul>
-
-<p />
-
-<b>[Apply on a database…]
-</b>
-
-<p />
-
-<ul>
-
-<li>[the <a href="gwsetup?lang=%l;v=cleanup.htm">cleaning up</a>]
-
-<li>[the <a href="gwsetup?lang=%l;v=rename.htm">renaming</a>]
-
-<li>[the <a href="gwsetup?lang=%l;v=delete.htm">deletion</a>]
-
-<li>[the <a href="gwsetup?lang=%l;v=merge.htm">merging</a> with other databases]
-
-<li>[the <a href="gwsetup?lang=%l;v=save.htm">saving and restoring</a>]
-
-<li>[the <a href="gwsetup?lang=%l;v=consang.htm">initialisation of consanguinities</a>]
-%(
-the <a href="gwsetup?lang=%l;v=consang.htm">initialisation of consanguinities</a
->
-%)
-
-<li>[<a href="gwsetup?lang=%l;v=update_nldb.htm">update_nldb</a>]
-
-</ul>
-
-<p />
-
-<b>[Configure…]
-</b>
-
+<center><h1><font color=#2f6400>Gwsetup - [Main menu]</font></h1></center>
 <p>
-
+<b>[Consult]</b>
+<p>
 <ul>
-
-<li>[the parameters of a <a href="gwsetup?lang=%l;v=gwf.htm">database</a>]
-
-<li>[the parameters of the <a href="gwd?lang=%l;v=gwd.htm">gwd service</a>]
-
+<li>[the existing databases] (<a href="gwsetup?lang=%l;v=list.htm">list</a>)
+<li>[the traces of the latest command] (<a href="gwsetup?lang=%l;v=traces.htm">traces</a>)
 </ul>
-
-<p />
-
-<br />
-
-[… or go back to the <a href="%l">welcome page</a> of "gwsetup"]
-
-<br />
-
-[… or consult the complete <a href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">documentation</a> of <font color=#2f6400><b>GeneWeb</b></font>]
-%(
-… or consult the complete <a href="http://geneweb.tuxfamily.org/wiki/GeneWeb" 
-target="_blank">documentation</a> of <font color=#2f6400><b>GeneWeb</b></font>
-%)
+<p>
+<b>[Create a database]
+</b>
+<p>
+<ul>
+<li>[with the simple method] (<a href="gwsetup?lang=%l;v=simple.htm">gwc</a>)
+<li>[from a GEDCOM file] (<a href="gwsetup?lang=%l;v=ged2gwb.htm">ged2gwb</a>)
+<li>[from a GEDCOM file (ged2gwb2)] (<a href="gwsetup?lang=%l;v=ged2gwb2.htm">ged2gwb2</a>)
+<li>[from a GeneWeb source file] (<a href="gwsetup?lang=%l;v=gwc.htm">gwc</a>)
+<li>[from a GeneWeb source file (gwc2)] (<a href="gwsetup?lang=%l;v=gwc2.htm">gwc2</a>)
+</ul>
+<p>
+<b>[Extract from a database]
+</b>
+<p>
+<ul>
+<li>[a GEDCOM file] (<a href="gwsetup?lang=%l;v=gwb2ged.htm">gwb2ged</a>)
+<li>[a GeneWeb source file] (<a href="gwsetup?lang=%l;v=gwu.htm">gwu</a>)
+</ul>
+<p>
+<b>[Apply on a database]
+</b>
+<p>
+<ul>
+<li>[cleaning up] (<a href="gwsetup?lang=%l;v=cleanup.htm">cleanup</a>)
+<li>[renaming] (<a href="gwsetup?lang=%l;v=rename.htm">rename</a>)
+<li>[deletion] (<a href="gwsetup?lang=%l;v=delete.htm">delete</a>)
+<li>[merging with other databases] (<a href="gwsetup?lang=%l;v=merge.htm">merge</a>)
+<li>[saving and restoring] (<a href="gwsetup?lang=%l;v=save.htm">save</a>)
+<li>[initialisation of consanguinities] (<a href="gwsetup?lang=%l;v=consang.htm">consang</a>)
+<li>[update_nldb](<a href="gwsetup?lang=%l;v=update_nldb.htm">update_nldb</a>)
+</ul>
+<p>
+<b>[Configure]
+</b>
+<p>
+<ul>
+<li>[the parameters of a database] (<a href="gwsetup?lang=%l;v=gwf.htm">.gwf</a>)
+<li>[the parameters of the gwd service] (<a href="gwd?lang=%l;v=gwd.htm">gwd</a>)
+</ul>
+<p>
+<br>
+[Return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
+<br>
+[You can also consult the complete documentation of %G.] (%D)
