--- a/bin/setup/lang/merge.htm
+++ b/bin/setup/lang/merge.htm
@@ -22,26 +22,17 @@
 <form method=GET action="merge">
 <input type=hidden name=lang value="%l">
 
-[All your databases to be merged must be first under <b><font color=#2f6400>GeneWeb</font></b>.]
-%(
-All your databases to be merged must be first under <b><font color=#2f6400>GeneW
-eb</font></b>.
-%)
+[All your databases to be merged must be first under %G.]
 <p>
-[If it is not the case, if, for example, some of them are just GEDCOM files or GeneWeb source files, return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a> to create them under <b><font color=#2f6400>GeneWeb</font></b>, then go back to this page.]
+[If it is not the case, if, for example, some of them are just GEDCOM files or GeneWeb source files, return to the main menu to create them under %G, then go back to this page.]
 %(
 If it is not the case, if, for example, some of them are just GEDCOM files or Ge
-neWeb source files, return to the <a href="gwsetup?lang=%l;v=welcome.htm">main m
-enu</a> to create them under <b><font color=#2f6400>GeneWeb</font></b>, then go 
+neWeb source files, return to the main menu to create them under %G, then go 
 back to this page.
 %)
 <p>
 <ul><li>
 [Once done, select the databases you want to merge by pushing their associated buttons:]
-%(
-Once done, select the databases you want to merge by pushing their associated bu
-ttons:
-%)
 <p>
 <table class="setup">
 %b{
@@ -59,17 +50,17 @@ ttons:
 <input name=o size=30>
 <p>
 <li>
-[Then push this button:]
+[Then click on this button][:]
 <p>
 <input type=submit value="[Merge]
 ">
 </ul>
 </form>
 <p>
-[Remark: merging consists on simple concatenation of the databases. There is no research for identical persons. After merging, you therefore have to research the possible doubled persons or families and merge them. See the <a href="doc/%l/update.htm#MrgP">documentation</a>.]
+[Remark: merging consists on simple concatenation of the databases. There is no research for identical persons. After merging, you therefore have to research the possible doubled persons or families and merge them. See the documentation.]
+(%D)
 %(
 Remark: merging consists on simple concatenation of the databases. There is no r
 esearch for identical persons. After merging, you therefore have to research the
- possible doubled persons or families and merge them. See the <a href="doc/%l/up
-date.htm#MrgP">documentation</a>.
+possible doubled persons or families and merge them. See the documentation.
 %)
