--- a/bin/setup/lang/traces.htm
+++ b/bin/setup/lang/traces.htm
@@ -15,29 +15,21 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[Traces of the latest command]
-</h1>
+<h1 style="margin:0;">[Traces of the latest command]</h1>
 </div>
-
-<br /><p />
-
-[Here is the contents of the file "comm.log":]
-
+<br><p>
+[Here is the contents of the file "comm.log"][:]
 <dl><dt><dd>
 <pre>
 %g{- [empty file]
 -}
 </pre>
 </dl>
-
-[And the content of gwsetup.log ]
+[And the content of gwsetup.log][:]
 <dl><dt><dd>
 <pre>
 %G{- [no traces]
 -}
 </pre>
 </dl>
-
-
-[You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
+[Return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
