--- a/bin/setup/lang/update_nldb.htm
+++ b/bin/setup/lang/update_nldb.htm
@@ -15,16 +15,14 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[Update links page / family chronicle]
-</h1>
+<h1 style="margin:0;">[Update links page / family chronicle]</h1>
 </div>
 <p>
 <form method="get" action="update_nldb">
 <input type="hidden" name="opt" value="check">
 <input type="hidden" name="lang" value="%l">
 <ul><li>
-[Select your database by clicking on the associated button.]
+[Select your database by clicking on the associated button][:]
 <p>
 <table class="setup">
 %b{
@@ -39,10 +37,8 @@
 </table>
 <p>
 <li>
-[Then press this button:]
+[Then click on this button][:]
 <p>
-
-<input type="submit" value="[Update_nldb]
-">
+<input type="submit" value="[Update_nldb]">
 </ul>
 </form>
