--- a/bin/setup/lang/clean_ok.htm
+++ b/bin/setup/lang/clean_ok.htm
@@ -15,31 +15,19 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[Operation completed]
-</h1>
+<h1 style="margin:0;">[Operation completed]</h1>
 </div>
-
-<p />
-
-[So. The cleaning up of you database "%a" is completed.]
-
-<p />
-
+<p>
+[The cleaning up of you database "%a" is completed.]
+<p>
 [Your database has been completely rebuilt: the old version is on the subdirectory "old" of the directory "%w". You can recover it in case of problem.]
 %(
 Your database has been completely rebuilt: the old version is on the subdirector
 y "old" of the directory "%w". You can recover it in case of problem.
 %)
-
-<p />
-
-[You can consult your very clean new database…]
-
-<p />
-
+<p>
+[You can consult your very clean new database][:]
+<p>
 <ul><li><a href="http://%m:%P/%a">http://%m:%P/%a</a></ul>
-
-<p /><br />
-
-… [or return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
+<p>
+[Return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">gesetup</a>)
