--- a/bin/setup/lang/cleanup.htm
+++ b/bin/setup/lang/cleanup.htm
@@ -7,7 +7,7 @@
   <meta name="robots" content="none">
   <link rel="shortcut icon" href="images/favicon_gwsetup.png">
 
-  <title>[Clean up]
+  <title>[Cleanup]
 </title>
 %fsetup.css;
 </head>
@@ -28,21 +28,14 @@ ess to your database has slowed down.
 %)
 <p>
 <ul><li>
-[For a simple cleaning up, apply the <a href="gwsetup?lang=%l;v=consang.htm">initialisation</a> of consanguinities.]
-%(
-For a simple cleaning up, apply the <a href="gwsetup?lang=%l;v=consang.htm">init
-ialisation</a> of consanguinities.
-%)
+[For a simple cleaning up, apply the initialisation of consanguinities.]
+(<a href="gwsetup?lang=%l;v=consang.htm">consang</a>)
 <p >
 <li>
 <form method="get" action="cleanup">
 <input type="hidden" name="lang" value="%l" />
 
-[For a radical cleaning up, select your database by clicking on the associated button:]
-%(
-For a radical cleaning up, select your database by clicking on the associated bu
-tton:
-%)
+[For a radical cleaning up, select your database by clicking on the associated button][:]
 <p>
 <table class="setup">
 %b{
@@ -55,7 +48,7 @@ tton:
 </table>
 <p>
 <li>
-[Then push this button:]
+[Then push this button][:]
 <p>
 <input type="submit" value="[Cleanup]
 " />
