--- a/bin/setup/lang/del_ok.htm
+++ b/bin/setup/lang/del_ok.htm
@@ -15,38 +15,24 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[Databases deleted]
-</h1>
+<h1 style="margin:0;">[Databases deleted]</h1>
 </div>
-
-<p />
-
-[Here are the deleted databases:]
-
-<p />
-
+<p>
+[Here are the deleted databases][:]
+<p>
 <ul>
-
 %k{<li>%a|<li>- [no selection]
 -}
-
 </ul>
-
-<p />
-
-[Here are the remaining databases:]
-
-<p />
-
+<p>
+[Here are the remaining databases][:]
+<p>
 <ul>
-
 %b{<li><a href="http://%m:%P/%a">%a</a>|
 <li> [there is no database]
 }
-
 </ul>
-
-<p />
-
-[Return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
+<p>
+[Return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
+</body>
+</html>
