--- a/bin/setup/lang/delete.htm
+++ b/bin/setup/lang/delete.htm
@@ -15,36 +15,30 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[Deletion of databases]
-</h1>
+<h1 style="margin:0;">[Deletion of databases]</h1>
 </div>
-
 <form method="get" action="delete">
-<input type="hidden" name="lang" value="%l" />
-<ul><li>
-[Select the database or databases you want to delete, by clicking on the associated buttons.]
-%(
-Select the database or databases you want to delete, by clicking on the associat
-ed buttons.
-%)
-
-<p>
-
-<table class="setup">
-%b{
-<tr align="left">
-<td><a href="http://%m:%P/%a">%a</a></td>
-<td><input type="checkbox" name="%a" value="on" /></td>
-</tr>|
-<tr align="left"><td>- [there is no database at present]
-</tr></td>}
-</table>
-<p>
-<li>
-[Then push this button:]
-<p>
-<input type="submit" value="[Check]
-">
-</ul>
+  <input type="hidden" name="lang" value="%l" />
+  <ul>
+    <li>[Select the database or databases you want to delete, by clicking on the associated buttons.]
+    %(
+    Select the database or databases you want to delete, by clicking on the associat
+    ed buttons.
+    %)
+    <p>
+    <table class="setup">
+      %b{
+      <tr align="left">
+        <td><a href="http://%m:%P/%a">%a</a></td>
+        <td><input type="checkbox" name="%a" value="on" /></td>
+      </tr>|
+      <tr align="left"><td>- [there is no database at present]
+      </tr></td>}
+    </table>
+    <p>
+    <li>[Then push this button][:]
+  <input type="submit" value="[Check]">
+  </ul>
 </form>
+</body>
+</html>
