--- a/bin/setup/lang/delete_1.htm
+++ b/bin/setup/lang/delete_1.htm
@@ -15,38 +15,24 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[Deletion of databases]
-</h1>
+<h1 style="margin:0;">[Deletion of databases]</h1>
 </div>
-
-<p />
-
+<p>
 <form method="post" action="delete_1">
 <input type="hidden" name="lang" value="%l" />
 %k{<input type="hidden" name="%a" value="del" />|}
-
 [Are you sure you want to delete these databases?]
-
-<p />
-
+<p>
 <ul>
-
 %k{<li><a href="http://%m:%P/%a">%a</a>|
 <li>- [no selection]
 -}
-
 </ul>
-
-<p />
-
+<p>
 [Warning: this suppression is definitive! To confirm, push this button.]
-
-<p />
-
-<dl><dt><dd><input type="submit" value="[Delete]
-" /></dl>
-
-<p />
-
-[Or return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
+<p>
+<dl><dt><dd><input type="submit" value="[Delete]"></dl>
+<p>
+[Return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
+</body>
+</html>
