--- a/bin/setup/lang/err_acc.htm
+++ b/bin/setup/lang/err_acc.htm
@@ -15,17 +15,10 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-<font color="red">[Forbidden access]
-</font></h1>
+<h1 style="margin:0;"><font color="red">[Forbidden access]</font></h1>
 </div>
-
 [You are not allowed to access this service. Only the address "%o" can use it.]
-
-<p />
-
+<p>
 [To change that, edit the file named "%y" and change the line holding: "<tt>%o</tt>" into "<tt>%a</tt>".]
-%(
-To change that, edit the file named "%y" and change the line holding: "<tt>%o</t
-t>" into "<tt>%a</tt>".
-%)
+</body>
+</html>
