--- a/bin/setup/lang/err_miss.htm
+++ b/bin/setup/lang/err_miss.htm
@@ -15,14 +15,10 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-<font color="red">[Missing name]
-</font>
-</h1>
+<h1 style="margin:0;"><font color="red">[Missing name]</font></h1>
 </div>
-
 [It is not possible to execute your command. You did not give enough information.]
-
-<p />
-
-[Go back to the <a href="%n">previous page</a>.]
+<p >
+[Go back to the previous page.] (<a href="%n">back</a>)
+</body>
+</html>
