--- a/bin/setup/lang/err_name.htm
+++ b/bin/setup/lang/err_name.htm
@@ -15,18 +15,15 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-<font color="red">[Incorrect name]
-</font></h1>
+<h1 style="margin:0;"><font color="red">[Incorrect name]</font></h1>
 </div>
-
 [You cannot choose "%o" as database name, because it holds forbidden characters.]
-
-<p />
-
+<p>
 [The name of a database is made of non accentuated letters (uppercase or lowercase), digits and of the character "-". Other characters (particularly space) are forbidden.]
 %(
 The name of a database is made of non accentuated letters (uppercase or lowercas
 e), digits and of the character "-". Other characters (particularly space) are f
 orbidden.
 %)
+</body>
+</html>
