--- a/bin/setup/lang/gw2gd_ok.htm
+++ b/bin/setup/lang/gw2gd_ok.htm
@@ -15,22 +15,15 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[Operation completed]
-</h1>
+<h1 style="margin:0;">[Operation completed]</h1>
 </div>
-
 [The extraction of the GEDCOM file is terminated.]
-
-<p />
-
+<p>
 [This has built a file named "%o".]
-
-<p />
-
+<p>
 [This file is in the directory]
 "%w".
-
-<p />
-
-[You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
+<p>
+[Return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
+</body>
+</html>
