--- a/bin/setup/lang/gwdiff.htm
+++ b/bin/setup/lang/gwdiff.htm
@@ -15,21 +15,16 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[Compute the difference between two bases]
-</h1>
+<h1 style="margin:0;">[Compute the difference between two bases]</h1>
 </div>
-
 <form method=GET action="gwdiff">
 <input type=hidden name=opt value="check">
 <input type=hidden name=lang value="%l">
-
 <table>
 <tr>
 <td>
 <ul><li>
-[Select your first database:]
-
+[Select your first database][:]
 <p>
 <table class="setup">
 %b{<tr align=left>
@@ -46,11 +41,9 @@ Starting person in first base.<br> <span style="color:#FF0000;">Mandatory parame
 ter</span>
 %)
 </td></tr>
-
 <tr align=left><td>[First name]
 </td>
 <td><input name="a1" size=30 maxlength=200></td>
-
 <td>[Num]
 </td>
 <td><input name="a2" size=5 maxlength=8></td></tr>
@@ -64,7 +57,7 @@ ter</span>
 <td>&nbsp;&nbsp;&nbsp;</td>
 <td>
 <ul><li>
-[Select your second database:]
+[Select your second database][:]
 <p>
 <table class="setup">
 %b{<tr align=left>
@@ -74,21 +67,15 @@ ter</span>
 </table>
 <p>
 <table class="setup">
-<tr align=left><td> </td><td colspan=3>[Starting person in second base.<br> <span style="color:#FF0000;">Mandatory parameter</span>]
-%(
-Starting person in second base.<br> <span style="color:#FF0000;">Mandatory param
-eter</span>
-%)
+<tr align=left><td> </td><td colspan=3>
+[Starting person in second base.<br> <span style="color:#FF0000;">Mandatory parameter</span>]
 </td></tr>
-
 <tr align=left><td>[First name]
 </td>
 <td><input name="b1" size=30 maxlength=200></td>
-
 <td>[Num]
 </td>
 <td><input name="b2" size=5 maxlength=8></td></tr>
-
 <tr align=left><td>[Surname]
 </td>
 <td colspan=3><input name="b3" size=40 maxlength=200></td></tr>
@@ -99,16 +86,15 @@ eter</span>
 </table>
 <p>
 <li>
-[Select the options you want:]
+[Select the options you want][:]
 <p>
 <dl><dt><dd><table class="setup">
 <tr align=left>
 <td><input type=checkbox name=ad value="on">-ad &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td>[Checks descendants of all ascendants .]
+<td>[Checks descendants of all ascendants.]
 </td>
 </tr>
 </table></dl>
-
 <dl><dt><dd><table class="setup">
 <tr align=left>
 <td><input type=checkbox name=d value="on">-d &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
@@ -116,7 +102,6 @@ eter</span>
 </td>
 </tr>
 </table></dl>
-
 <dl><dt><dd><table class="setup">
 <tr align=left>
 <td><input type=checkbox name=mem value="on">-mem &nbsp;</td>
@@ -124,7 +109,6 @@ eter</span>
 </td>
 </tr>
 </table></dl>
-
 <!--
 <p>
 <dl><dt><dd><table class="setup">
@@ -137,10 +121,7 @@ eter</span>
 </table></dl>-->
 <p>
 <li>
-[Then push this button:]
-
-<p>
-<input type=submit value="[Compare]
-">
+[Then click on this button][:]
+<input type=submit value="[Compare]">
 </ul>
 </form>
