--- a/bin/setup/lang/gwdiff_ok.htm
+++ b/bin/setup/lang/gwdiff_ok.htm
@@ -15,27 +15,14 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[Differences computed]
-</h1>
+<h1 style="margin:0;">[Differences computed]</h1>
 </div>
-
-<p />
+<p>
 [Done. The operation is terminated.]
-
-<p />
-[You can also return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
-%(
-You can also return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>
-.
-%)
-
-<br /><p />
-
-[Click <a href="gwsetup?lang=%l;v=bso_comm.htm">here</a> for the results in "comm.log":]
-%(
-Click <a href="gwsetup?lang=%l;v=bso_comm.htm">here</a> for the results in "comm
-.log":
-%)
-
-<p />
+<p>
+[Return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
+<p>
+[Read the alert messages in the file "comm.log"]
+(<a href="gwsetup?lang=%l;v=bso_comm.htm">comm.log</a>
+</body>
+</html>
