--- a/bin/setup/lang/merge_1.htm
+++ b/bin/setup/lang/merge_1.htm
@@ -15,66 +15,48 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[Merging databases]
-</h1>
+<h1 style="margin:0;">[Merging databases]</h1>
 </div>
 
 <p>
-
-%v{<b>[Warning</b>: there already exists a database with the name "%o" in your <a href="gwsetup?lang=%l;v=list.htm">directory</a>. If you push the button "Ok" below, it will be erased.]
+%v{[Warning: there already exists a database with the name "%o" in your directory. If you push the button "Ok" below, it will be erased.]
+(<a href="gwsetup?lang=%l;v=list.htm">list</a>)
 %(
-Warning</b>: there already exists a database with the name "%o" in your <a href=
-"gwsetup?lang=%l;v=list.htm">directory</a>. If you push the button "Ok" below, i
-t will be erased.
+Warning: there already exists a database with the name "%o" in your directory.
+If you push the button "Ok" below, it will be erased.
 %)
 <p>
-
 [If you just made this, it is probably its result, and therefore it is not important. Else, return to the previous page and choose another name for your database.]
 %(
 If you just made this, it is probably its result, and therefore it is not import
-ant. Else, return to the previous page and choose another name for your database
-.
+ant. Else, return to the previous page and choose another name for your database.
 %)
 <p>}
-
 <p>
-
 [We are going to create a database named "%o" from the following databases:]
-
 <ul>
 %s{<li>%a</b>|}
 </ul>
-
 <p>
-
 [Remark: this operation can answer in the twinkling of a eye or take some tenths of seconds or some minutes, depending on the cases. Be patient.]
 %(
 Remark: this operation can answer in the twinkling of a eye or take some tenths 
 of seconds or some minutes, depending on the cases. Be patient.
 %)
-
 <p>
-
 [Push the button below to create your database]
 %v{<br><blink><font color=red>[, and overwrite the previous database "%o" of the target directory]
 </font></blink>}:
-
 <p>
-
 <form method=POST action="merge_1">
 %h
 <dl><dt><dd>
 <input type=submit value="Ok">
-<input type=submit name=cancel value="[cancel]
-">
+<input type=submit name=cancel value="[cancel]">
 </dl>
 </form>
-
 <p>
-
-[For information, this operation corresponds to the following commands:]
-
+[For information, this operation corresponds to the following commands][:]
 <pre>
      $ cd "%w"
 %s{     $ %x%/gwu %a -o %a.gw|}     $ %x%/gwc %s{-sep %a.gw |}\-f -o %o
