--- a/bin/setup/lang/rename.htm
+++ b/bin/setup/lang/rename.htm
@@ -15,35 +15,25 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[Renaming]
-</h1>
+  <h1 style="margin:0;">[Renaming]</h1>
 </div>
-
 <form method=POST action="rename">
-<input type=hidden name=lang value="%l">
-<ul><li>
-[Change the names you want:]
-
-<p>
-
-<table class="setup">
-%b{
-<tr align=left>
-<td><a href="http://%m:%P/%a">%a</a></td>
-<td><input name="%a" value="%a" size=20></td>
-</tr>|
-<tr align=left><td>- [there is no database at present]
-</tr></td>}
-</table>
-
-<p>
-<li>
-[Then push this button:]
-
-<p>
-
-<input type=submit value="[Rename]
-">
-</ul>
+  <input type=hidden name=lang value="%l">
+  <ul>
+    <li>[Change the names you want][:]
+    <p>
+    <table class="setup">
+      %b{
+      <tr align=left>
+        <td><a href="http://%m:%P/%a">%a</a></td>
+        <td><input name="%a" value="%a" size=20></td>
+      </tr>|
+      <tr align=left><td>- [there is no database at present]
+      </tr></td>}
+    </table>
+    <p>
+    <li>[Then push this button][:]
+    <p>
+    <input type=submit value="[Rename]">
+  </ul>
 </form>
