--- a/bin/setup/lang/save.htm
+++ b/bin/setup/lang/save.htm
@@ -23,23 +23,17 @@
 
 <br><p>
 
-[To save your database, apply the <a href="gwsetup?lang=%l;v=gwu.htm">extraction of a GeneWeb source file</a>. Then copy the obtained file elsewhere in the disk, or better, on an external support.]
+[To save your database, apply the extraction of a GeneWeb source file. Then copy the obtained file elsewhere in the disk, or better, on an external support.]
 %(
-To save your database, apply the <a href="gwsetup?lang=%l;v=gwu.htm">extraction 
-of a GeneWeb source file</a>. Then copy the obtained file elsewhere in the disk,
- or better, on an external support.
+[To save your database, apply the extraction of a GeneWeb source file.
+Then copy the obtained file elsewhere in the disk, or better, on an external support.]
 %)
-(gwu)
+(<a href="gwsetup?lang=%l;v=gwu.htm">gwu</a>)
+<p>
+
+[To restore a gw database, apply the creation from a GeneWeb source file.]
+(<a href="gwsetup?lang=%l;v=gwc.htm">gwc</a>)
 
 <p>
 
-[To restore a gw database, apply the <a href="gwsetup?lang=%l;v=gwc.htm">creation from a GeneWeb source file</a>.]
-%(
-To restore a gw database, apply the <a href="gwsetup?lang=%l;v=gwc.htm">creation
- from a GeneWeb source file</a>.
-%)
-(gwc)
-
-<p>
-
-[You can return to the <a href="gwsetup?lang=%l;v=welcome.htm">main menu</a>.]
+[Return to the main menu.] (<a href="gwsetup?lang=%l;v=welcome.htm">welcome</a>)
