--- a/bin/setup/lang/simple.htm
+++ b/bin/setup/lang/simple.htm
@@ -15,23 +15,19 @@
 <body %Vbody_prop;>
 
 <div style="background:url('images/gwlogo.png') no-repeat left top; text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">
-[Simple method]
-</h1>
+<h1 style="margin:0;">[Simple method]</h1>
 </div>
-
 <form method="get" action="simple">
 <input type="hidden" name="lang" value="%l">
 <p>
 <ul><li>
-[Write the name you want for your database :]
+[Write the name you want for your database][:]
 <p>
 <input name="o" size="30" value="base">
 <p>
 <li>
-[Then push this button:]
+[Then click on this button][:]
 <p>
-<input type="submit" value="[Create]
-">
+<input type="submit" value="[Create]">
 </ul>
 </form>
