--- a/bin/setup/lang/welcome.htm
+++ b/bin/setup/lang/welcome.htm
@@ -15,8 +15,7 @@
 
 <div style="background:url('images/gwlogo.png') no-repeat left top;
   text-align:center; height:95px; line-height:95px; color:#2f6400;">
-<h1 style="margin:0;">[Management and creation]
-</h1>
+<h1 style="margin:0;">[Management and creation]</h1>
 </div>
 
 <br><br>
@@ -24,139 +23,75 @@
 <div class="welcome">
   <div style="float:left; width:50%%">
     <div>
-    <span style="font-weight:bold">
-[Consult…]
-    </span>
-<ul>
-
-<li>[<a href="gwsetup?lang=%l;v=list.htm">Family Tree</a>]
-
-<li>[<a href="gwsetup?lang=%l;v=traces.htm">the error history and statistics</a>.]
-
-</ul>
+      <span style="font-weight:bold">[Consult]</span>
+      <ul>
+        <li>[family Trees] (<a href="gwsetup?lang=%l;v=list.htm">list</a>)
+        <li>[the error history and statistics] (<a href="gwsetup?lang=%l;v=traces.htm">errors</a>)
+      </ul>
     </div>
     <div>
-    <span style="font-weight:bold">
-[Save…]
-    </span>
-<ul>
-
-<li>[a <a href="gwsetup?lang=%l;v=gwb2ged.htm">GEDCOM file</a>]
- (gwb2ged)
-
-<li>[a <a href="gwsetup?lang=%l;v=gwu.htm">GeneWeb source file</a>]
-(gwu)
-
-</ul>
+      <span style="font-weight:bold">[Save]</span>
+      <ul>
+        <li>[a GEDCOM file] (<a href="gwsetup?lang=%l;v=gwb2ged.htm">gwb2ged</a>)
+        <li>[a GeneWeb source file] (<a href="gwsetup?lang=%l;v=gwu.htm">gwu</a>)
+      </ul>
     </div>
   </div>
 
   <div style="float:left; width:50%%;">
-    <span style="font-weight:bold;">
-[Create Family Tree]
-    </span>
-<ul>
-
-<li>[from a <a href="gwsetup?lang=%l;v=ged2gwb.htm">GEDCOM file</a>]
-(ged2gwb)
-
-<li>[from a <a href="gwsetup?lang=%l;v=gwc.htm">GeneWeb source file</a>]
-(gwc)
-
-<li>[<a href="gwsetup?lang=%l;v=simple.htm">empty</a>]
-(gwc)
-
-</ul>
+    <span style="font-weight:bold;">[Create Family Tree]</span>
+    <ul>
+      <li>[from a GEDCOM file](<a href="gwsetup?lang=%l;v=ged2gwb.htm">ged2gwb</a>)
+      <li>[from a GeneWeb source file] (<a href="gwsetup?lang=%l;v=gwc.htm">gwc</a>)
+      <li>[empty] (<a href="gwsetup?lang=%l;v=simple.htm">gwc</a>)
+    </ul>
   </div>
-
 </div>
 
 <br><hr /><br>
 
 <div>
-<div style="float:left;">
-<span>
-[Advanced Options]
-</span>
-<ul>
-<li>[<a href="gwsetup?lang=%l;v=cleanup.htm">Cleaning up</a>]
-(consang)
+  <div style="float:left;">
+    <span><b>[Advanced Options]</b></span>
+    <ul>
+      <li>[Cleanup] (<a href="gwsetup?lang=%l;v=cleanup.htm">cleanup</a>)
+      <li>[Renaming] (<a href="gwsetup?lang=%l;v=rename.htm">rename</a>)
+      <li>[Deletion] (<a href="gwsetup?lang=%l;v=delete.htm">delete</a>)
+      <li>[Merging with other databases] (<a href="gwsetup?lang=%l;v=merge.htm">merge</a>)
+      <li>[Saving and restoring] (<a href="gwsetup?lang=%l;v=save.htm">gwu</a>)
+      <li>[Initialisation of consanguinities] (<a href="gwsetup?lang=%l;v=consang.htm">consang</a>)
+      <li>[Update links page / family chronicle] (<a href="gwsetup?lang=%l;v=update_nldb.htm">update_nldb</a>)
+      <li>[Compute connected componants] (<a href="gwsetup?lang=%l;v=connex.htm">connex</a>)
+      <li>[Compute the difference between two bases] (<a href="gwsetup?lang=%l;v=gwdiff.htm">gwdiff</a>)
+      <li>[Fixes problems in a base] (<a href="gwsetup?lang=%l;v=gwfix.htm">gwfixbase</a>)
+    </ul>
+  </div>
 
-<li>[<a href="gwsetup?lang=%l;v=rename.htm">Renaming</a>]
-
-<li>[<a href="gwsetup?lang=%l;v=delete.htm">Deletion</a>]
-
-<li>[<a href="gwsetup?lang=%l;v=merge.htm">Merging with other databases</a>]
-
-<li>[<a href="gwsetup?lang=%l;v=save.htm">Saving and restoring</a>]
-(gwu)
-
-<li>[<a href="gwsetup?lang=%l;v=consang.htm">Initialisation of consanguinities</a>]
-(consang)
-
-<li>[<a href="gwsetup?lang=%l;v=update_nldb.htm">Update links page / family chronicle</a>]
-%(
-<a href="gwsetup?lang=%l;v=update_nldb.htm">Update links page / family chronicle
-</a>
-%)
-(update_nldb)
-
-<li>[<a href="gwsetup?lang=%l;v=connex.htm">Compute connected componants</a>]
-(connex)
-
-<li>[<a href="gwsetup?lang=%l;v=gwdiff.htm">Compute the difference between two bases</a>]
-%(
-<a href="gwsetup?lang=%l;v=gwdiff.htm">Compute the difference between two bases<
-/a>
-%)
-(gwdiff)
-
-<li>[<a href="gwsetup?lang=%l;v=gwfix.htm">Fixes problems in a base</a>]
-(gwfixbase)
-
-
-</ul>
-</div>
-
-<div style="float:left;">
-<span>
-[Configure]
-</span>
-<ul>
-
-<li>[the parameters of a <a href="gwsetup?lang=%l;v=gwf.htm">database</a>]
-
-<li>[the parameters of the <a href="gwd?lang=%l;v=gwd.htm">gwd service</a>]
-
-</ul>
-</div>
-
+  <div style="float:left;">
+    <span><b>[Configure]</b></span>
+    <ul>
+      <li>[the parameters of a database] (<a href="gwsetup?lang=%l;v=gwf.htm">.gwf</a>)
+      <li>[the parameters of the gwd service] (<a href="gwd?lang=%l;v=gwd.htm">gwd</a>)
+    </ul>
+  </div>
 </div>
 
 <p style="clear:both">
 
 <p>
-
-[You can also consult the complete <a  href="http://geneweb.tuxfamily.org/wiki/gwsetup" target="_blank">documentation</a> of <font color=#2f6400><b>GeneWeb</b></font>.]
-%(
-You can also consult the complete <a  href="http://geneweb.tuxfamily.org/wiki/gw
-setup" target="_blank">documentation</a> of <font color=#2f6400><b>GeneWeb</b></
-font>.
-%)
+[You can also consult the complete documentation of %G.] (%D)
 
 <br><br>
 <div style="float: left; align: center;">
-<span>
-[Display in:]
-</span>
-<a href="co">Corsu</a>
-<a href="de">Deutsch</a>
-<a href="en">English</a>
-<a href="es">Español</a>
-<a href="fr">Français</a>
-<a href="it">Italiano</a>
-<a href="lv">Latviesu</a>
-<a href="sv">Svenska</a>
+  <span>[Display in][:]</span>
+  <a href="co">Corsu</a>
+  <a href="de">Deutsch</a>
+  <a href="en">English</a>
+  <a href="es">Español</a>
+  <a href="fr">Français</a>
+  <a href="it">Italiano</a>
+  <a href="lv">Latviesu</a>
+  <a href="sv">Svenska</a>
 </div>
 <br>
 
